--- a/.github/workflows/fetch.yml
+++ b/.github/workflows/fetch.yml
@@ -39,4 +39,4 @@ jobs:
       - name: Run feed fetcher
         env:
           DATABASE_URL: ${{ secrets.DATABASE_URL }}
-        run: python fetch_articles.py
+        run: python fetch-data-and-write-to-db.py
